# yolo26-rs

./: .gitignore  Cargo.toml  README.md  README_CN.md  build-wasm.sh
.cargo/: config.toml
doc/EN/: candle-0.10.2-patch-guide.md  index.md  tasks.md  train.md  yoloe.md
doc/EN/usage/: classify.md  detect.md  index.md  obb.md  pose.md  sahi.md  segment.md  semantic.md  train-seg.md  train-yoloe.md  yoloe-promptfree.md  yoloe-text.md  yoloe-visual.md
doc/中文/: 0.索引.md  Candle-0.10.2补丁指南.md  YOLOE接口.md  任务推理API.md  训练.md
doc/中文/使用场景/: 0.索引.md  SAHI切片检测.md  YOLOE文本提示.md  YOLOE无提示LRPC.md  (+9 more)
src/: bbox.rs  device.rs  error.rs  image.rs  lib.rs  options.rs
src/classify/: head.rs  mod.rs  model.rs  network.rs  prediction.rs
src/default_labels/: cityscapes.rs  coco.rs  dota.rs  imagenet.rs  lrpc.rs  mod.rs
src/detect/: head.rs  mod.rs  model.rs  network.rs  prediction.rs
src/model/: dtype_request.rs  letterbox.rs  mod.rs  output_viewer.rs  rect_letterbox.rs  scale.rs  scale_inference.rs
src/network/: mod.rs
src/obb/: bbox.rs  head.rs  mod.rs  model.rs  network.rs  prediction.rs
src/pose/: head.rs  keypoint.rs  mod.rs  model.rs  network.rs  prediction.rs
src/pt_loader/: archive.rs  blob_gen.rs  checkpoint_patch.rs  flatten.rs  metadata.rs  mod.rs  pickle_write.rs  reader.rs  storage_scan.rs  templates.rs  tensor_build.rs  writer.rs
src/segment/: head.rs  mask.rs  mod.rs  network.rs  prediction.rs
src/semantic/: head.rs  mod.rs  model.rs  network.rs  prediction.rs
src/train/: atan_op.rs  best_metric.rs  class_filter.rs  early_stopping.rs  exports.rs  freeze.rs  load_report.rs  lr_schedule.rs  mod.rs  warmup_schedule.rs
src/wasm/: builders.rs  classify.rs  config.rs  detect.rs  labels.rs  mod.rs  obb.rs  options.rs  pixel.rs  pose.rs  segment.rs  semantic.rs  yoloe_pf.rs  yoloe_visual.rs  yoloe_visual_helpers.rs
src/yoloe/: config.rs  first_dim.rs  infer_lrpc_vocab_classes.rs  mod.rs  predict_config.rs  reprta.rs  select_lrpc_indices.rs  usage.rs
(+230 files in other folders)
